[project]
name = "airtrack"
version = "0.1.0"
description = "Official Python SDK for the air-cargo.io air cargo tracking API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "air-cargo.io", email = "support@air-cargo.io" },
]
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.0,<3.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://air-cargo.github.io/air-cargo.io"
Repository = "https://github.com/omrik/air-cargo.io"
Documentation = "https://air-cargo.github.io/air-cargo.io/sdks/python"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
